--- a/01-What-Is-Machine-Learning.ipynb
+++ b/01-What-Is-Machine-Learning.ipynb
@@ -125,9 +125,8 @@
     "\n",
     "For the training set, these labels might be determined by individual inspection of a small representative sample of emails; for the remaining emails, the label would be determined using the model.\n",
     "For a suitably trained classification algorithm with enough well-constructed features (typically thousands or millions of words or phrases), this type of approach can be very effective.\n",
-    "We will see an example of such text-based classification in [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb).\n",
     "\n",
-    "Some important classification algorithms that we will discuss in more detail are Gaussian naive Bayes (see [In Depth: Naive Bayes Classification](05-Naive-Bayes.ipynb)), support vector machines (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)), and random forest classification (see [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb))."
+    "Some important classification algorithms that we will discuss in more detail are support vector machines (see [In-Depth: Support Vector Machines](07-Support-Vector-Machines.ipynb)) and random forest classification (see [In-Depth: Decision Trees and Random Forests](08-Random-Forests.ipynb))."
    ]
   },
   {
