Renames and menu

--- a/00-Start here.ipynb
+++ b/00-Start here.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b168b7a0",
+   "id": "5cfcd60a",
    "metadata": {},
    "source": [
     "# IACI24 Machine Learning\n",
@@ -23,24 +23,24 @@
     "\n",
     "[K-Means](11-K-Means.ipynb)\n",
     "\n",
-    "[Image Features](14-Image-Features.ipynb)"
+    "[Image Features](14-Image-Features.ipynb)\n",
+    "\n",
+    "## Exercises\n",
+    "\n",
+    "[Data Loading](exercises/00-Data-Loading.ipynb)\n",
+    "\n",
+    "[Supervised Learning](exercises/01-Supervised-Learning.ipynb)\n",
+    "\n",
+    "[Review of Supervised Learning](exercises/02-Review-of-Supervised-Learning.ipynb)\n",
+    "\n",
+    "[Cross-validation and Grid Search](exercises/03-Cross-validation-and-Grid-Search.ipynb)\n",
+    "\n",
+    "[Linear Models for Classification](exercises/04-Linear-Models-for-Classification.ipynb)\n",
+    "\n",
+    "[Linear Models for Regression](exercises/05-Linear-Models-for-Regression.ipynb)\n",
+    "\n",
+    "[Trees](exercises/06-Trees.ipynb)"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "90275add",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ac282e1",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
